--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@web3modal/ethereum": "^2.1.1",
+    "@web3modal/react": "^2.1.1",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.2",
@@ -26,6 +28,7 @@
     "semantic-ui-react": "^2.1.4",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
+    "wagmi": "^0.11.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
