--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@web3modal/ethereum": "^2.1.1",
     "@web3modal/react": "^2.1.1",
     "bootstrap": "^5.2.3",
+    "env-cmd": "^10.1.0",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
