--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mariadb": "^3.1.0"
+    "mariadb": "^3.1.0",
+    "sequelize": "^6.29.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
