--- a/client/package.json
+++ b/client/package.json
@@ -21,9 +21,11 @@
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.5.0",
@@ -59,6 +61,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.14.1",
+    "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.26",
     "css-loader": "^6.7.3",
     "jest-styled-components": "^7.1.1",
