--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
     "mariadb": "^3.1.0",
     "mysql2": "^3.2.0",
     "sequelize": "^6.29.3",
-    "sequelize-auto": "^0.8.8"
+    "sequelize-auto": "^0.8.8",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.13.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
