--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
+    "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
     "wagmi": "^0.11.5",
