--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mariadb": "^3.1.0",
-    "sequelize": "^6.29.0"
+    "mysql2": "^3.2.0",
+    "sequelize": "^6.29.3",
+    "sequelize-auto": "^0.8.8",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
