--- a/client/package.json
+++ b/client/package.json
@@ -36,7 +36,8 @@
     "swiper": "^9.1.0",
     "typescript": "^4.9.4",
     "wagmi": "^0.11.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
