--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.13.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -17,8 +19,7 @@
     "mysql2": "^3.2.0",
     "sequelize": "^6.29.3",
     "sequelize-auto": "^0.8.8",
-    "@types/express": "^4.17.17",
-    "@types/node": "^18.13.0"
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20",
