feat, refactor: 배송원 수행 현황 컴포넌트 관리 로직 추가 및 코드 리팩토링

--- a/client/package.json
+++ b/client/package.json
@@ -72,6 +72,7 @@
     ]
   },
   "devDependencies": {
+    "@types/dropzone": "^5.7.4",
     "@types/node": "^18.14.1",
     "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.26",
