--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "lottie-web": "^5.11.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-icons": "^1.10.2",
