--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mariadb": "^3.1.0",
+    "mongoose": "^7.1.0",
     "mysql2": "^3.2.0",
     "sequelize": "^6.29.3",
     "sequelize-auto": "^0.8.8",
