--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
+    "express": "^4.18.2",
     "lottie-react": "^2.4.0",
     "lottie-web": "^5.11.0",
     "multer": "^1.4.5-lts.1",
@@ -75,7 +76,7 @@
   },
   "devDependencies": {
     "@types/dropzone": "^5.7.4",
-    "@types/node": "^18.14.1",
+    "@types/node": "^18.16.10",
     "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.26",
     "css-loader": "^6.7.3",
