--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
+    "jest": "^27.5.1",
     "lottie-react": "^2.4.0",
     "lottie-web": "^5.11.0",
     "multer": "^1.4.5-lts.1",
@@ -53,7 +54,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
