--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.13.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mariadb": "^3.1.0",
     "mongoose": "^7.1.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
     "sequelize": "^6.29.3",
     "sequelize-auto": "^0.8.8",
