--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.ts",
-    "test" : "jest"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +26,7 @@
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
