--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "awsStart" : "pm2 start server.ts",
     "start": "nodemon server.ts",
     "test": "jest"
   },
@@ -21,6 +22,7 @@
     "mongoose": "^7.1.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
+    "pm2": "^5.3.0",
     "sequelize": "^6.29.3",
     "sequelize-auto": "^0.8.8",
     "socket.io": "^4.6.1"
