--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.0.10",
     "@web3modal/ethereum": "^2.1.1",
     "@web3modal/react": "^2.1.1",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
