--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "awsStart" : "pm2 start server.ts",
+    "awsStart": "pm2 start server.ts",
     "start": "nodemon server.ts",
     "test": "jest"
   },
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "mariadb": "^3.1.0",
     "mongoose": "^7.1.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
     "pm2": "^5.3.0",
