--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.17",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.13.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -29,7 +30,9 @@
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.2",
     "@types/jest": "^29.5.1",
+    "@types/morgan": "^1.9.4",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
