--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
+    "html5-qrcode": "^2.3.8",
     "jest": "^27.5.1",
     "lottie-react": "^2.4.0",
     "lottie-web": "^5.11.0",
