--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
+    "nodemailer": "^6.9.3",
     "pm2": "^5.3.0",
     "sequelize": "^6.29.3",
     "sequelize-auto": "^0.8.8",
