--- a/server/package.json
+++ b/server/package.json
@@ -24,11 +24,13 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
+    "node-fetch": "^3.3.1",
     "nodemailer": "^6.9.3",
     "pm2": "^5.3.0",
     "sequelize": "^6.29.3",
     "sequelize-auto": "^0.8.8",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "twilio": "^4.11.2"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
