--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^18.13.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mariadb": "^3.1.0",
