--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,10 @@
   "name": "quicker_react",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
@@ -23,6 +26,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
@@ -33,6 +37,7 @@
     "multer": "^1.4.5-lts.1",
     "pm2": "^5.3.0",
     "qrcode": "^1.5.3",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-icons": "^1.10.2",
@@ -82,8 +87,9 @@
     ]
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/dropzone": "^5.7.4",
-    "@types/node": "^18.16.10",
+    "@types/node": "^18.16.18",
     "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.26",
     "css-loader": "^6.7.3",
