--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "express": "^4.18.2",
     "html5-qrcode": "^2.3.8",
     "jest": "^27.5.1",
+    "klip-sdk": "^2.2.1",
     "lottie-react": "^2.4.0",
     "lottie-web": "^5.11.0",
     "multer": "^1.4.5-lts.1",
