--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^18.13.0",
     "axios": "^1.4.0",
+    "caver-js": "^1.10.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
