--- a/client/package.json
+++ b/client/package.json
@@ -25,17 +25,22 @@
     "@web3modal/react": "^2.1.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "caver-js": "^1.10.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "html5-qrcode": "^2.3.8",
+    "https-browserify": "^1.0.0",
     "jest": "^27.5.1",
     "klip-sdk": "^2.2.1",
     "lottie-react": "^2.4.0",
     "lottie-web": "^5.11.0",
     "multer": "^1.4.5-lts.1",
+    "os-browserify": "^0.3.0",
     "pm2": "^5.3.0",
     "qrcode": "^1.5.3",
     "query-string": "^8.1.0",
@@ -55,9 +60,11 @@
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "socket.io-client": "^4.6.1",
+    "stream-http": "^3.2.0",
     "styled-components": "^5.3.6",
     "swiper": "^9.1.0",
     "typescript": "^4.9.4",
+    "url": "^0.11.1",
     "wagmi": "^0.11.5",
     "web-vitals": "^2.1.4",
     "zustand": "^4.3.6"
