--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,9 @@
   "dependencies": {
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
+    "@draft-js-plugins/editor": "^4.1.3",
+    "@draft-js-plugins/emoji": "^4.6.6",
+    "@draft-js-plugins/linkify": "^4.2.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
@@ -18,6 +21,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@toast-ui/editor": "^3.2.2",
     "@types/jest": "^27.5.2",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -31,6 +35,7 @@
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
+    "draft-js": "^0.11.7",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "html5-qrcode": "^2.3.8",
@@ -49,8 +54,9 @@
     "react-bootstrap-icons": "^1.10.2",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone": "^14.2.3",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.10.1",
     "react-id-swiper": "^4.0.0",
     "react-image": "^4.1.0",
     "react-modal": "^3.16.1",
@@ -96,8 +102,10 @@
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
+    "@types/draft-js": "^0.11.12",
     "@types/dropzone": "^5.7.4",
     "@types/node": "^18.16.18",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.26",
     "css-loader": "^6.7.3",
