--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@slack/bolt": "^3.13.3",
     "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.17",
     "@types/multer": "^1.4.7",
