--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "apexcharts": "^3.41.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "caver-js": "^1.10.2",
@@ -48,6 +49,7 @@
     "qrcode": "^1.5.3",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-icons": "^1.10.2",
     "react-device-detect": "^2.2.3",
