--- a/server/package.json
+++ b/server/package.json
@@ -24,11 +24,11 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mariadb": "^3.1.0",
+    "mariadb": "^3.2.0",
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.2.0",
+    "mysql2": "^3.6.0",
     "nodemailer": "^6.9.3",
     "pm2": "^5.3.0",
     "sequelize": "^6.29.3",
@@ -41,6 +41,7 @@
     "@jest/globals": "^29.6.1",
     "@types/compression": "^1.7.2",
     "@types/jest": "^29.5.3",
+    "@types/mongodb": "^4.0.7",
     "@types/morgan": "^1.9.4",
     "jest": "^29.6.1",
     "nodemon": "^2.0.20",
