--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@slack/web-api": "^6.9.0",
     "axios": "^1.4.0",
     "caver-js": "^1.10.2",
+    "chalk": "^4.1.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
@@ -40,7 +41,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
     "@types/mongodb": "^4.0.7",
-    "@types/morgan": "^1.9.4",
+    "@types/morgan": "^1.9.5",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.5.9",
     "@types/sequelize": "^4.28.15",
@@ -62,6 +63,6 @@
       "js",
       "json"
     ],
-    "testEnviroment" :"node"
+    "testEnviroment": "node"
   }
 }
