--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "chalk": "^4.1.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "cron": "^2.4.3",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
