--- a/server/package.json
+++ b/server/package.json
@@ -37,7 +37,9 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.22.5",
     "@jest/globals": "^29.6.1",
+    "@types/body-parser": "^1.19.3",
     "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.14",
     "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
