--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.0",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^6.9.3",
     "pm2": "^5.3.0",
     "sequelize": "^6.32.1",
@@ -47,6 +48,7 @@
     "@types/morgan": "^1.9.5",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.5.9",
+    "@types/node-fetch": "^2.6.6",
     "@types/sequelize": "^4.28.15",
     "jest": "^29.6.1",
     "nodemon": "^2.0.20",
