--- a/client/package.json
+++ b/client/package.json
@@ -60,6 +60,7 @@
     "react-icons": "^4.10.1",
     "react-id-swiper": "^4.0.0",
     "react-image": "^4.1.0",
+    "react-minimal-pie-chart": "^8.4.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
