--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.1",
     "mariadb": "^3.2.0",
     "mongoose": "^7.5.2",
     "morgan": "^1.10.0",
